--- a/interfejsy/oferty/diagnostyka.mdx
+++ b/interfejsy/oferty/diagnostyka.mdx
@@ -1,18 +1,18 @@
 ---
-title: 'Diagnostyka'
-description: 'Oferta na wykonanie diagnostyki urządzenia.'
-icon: 'gauge-low'
+title: "Diagnostyka"
+description: "Oferta na wykonanie diagnostyki urządzenia."
+icon: "gauge-low"
 ---
+
+Oprócz wspólnych pól, omówionych w sekcji "[Nowa Oferta](https://tiemed.mintlify.app/Nowa%20oferta#edycja-nowej-oferty-wsp%C3%B3lne-pola)", każdy typ oferty ma widoczne specyficzne dla siebie pola.
 
 Oferta bardzo podobna do typu "[Serwis](/interfejsy/oferty/serwis)", z tą różnicą że pole części jest ukryte.
 
-Typ Diagnostyka również korzysta z tego samego template pdf co Serwis.  
-
+Typ Diagnostyka również korzysta z tego samego template pdf co Serwis.
 
 ### Dotyczy urządzeń
 
-Pole wyboru służące do określenia jakiego typu jest urządzenie na które jest oferta. Warunkuje widoczność pól "Treść wykonanej usługi dla aparatury med." oraz ""dla aparatury lab.".
-Warunkuje również automatyczny vat w [wysyłka/dojazd](/interfejsy/oferty/nowa-oferta#wysy%C5%82ka-%2F-dojazd).
+Pole wyboru służące do określenia jakiego typu jest urządzenie na które jest oferta. Warunkuje widoczność pól "Treść wykonanej usługi dla aparatury med." oraz ""dla aparatury lab.". Warunkuje również automatyczny vat w [wysyłka/dojazd](/interfejsy/oferty/nowa-oferta#wysy%C5%82ka-%2F-dojazd).
 
 - Medyczne- czyli urządzenie podlegające 8% vat. Udostępnia do edycji jedno pole treści usługi i kwoty.
 - Laboratoryjne- czyli urządzenie podlegające 23% vat. Udostępnia do edycji jedno pole treści usługi i kwoty.
@@ -28,3 +28,20 @@ Miejsce na wpisanie treści wykonanej usługi oraz jej wyceny.
   title="Zrzut ekranu 2025-10-09 105413.png"
   style={{ width:"87%" }}
 />
+
+---
+
+<CardGroup cols={2}>
+  <Card title="Oferta serwis" icon="screwdriver-wrench" href="/interfejsy/oferty/serwis">
+    
+  </Card>
+  <Card title="Oferta przegląd" icon="passport" href="/interfejsy/oferty/przeglad">
+    
+  </Card>
+  <Card title="Oferta części" icon="boxes-stacked" href="/interfejsy/oferty/czesci">
+    
+  </Card>
+  <Card title="Nowa oferta" icon="pen-to-square" href="/interfejsy/oferty/nowa-oferta">
+    
+  </Card>
+</CardGroup>
