--- a/interfejsy/oferty/nowa-oferta.mdx
+++ b/interfejsy/oferty/nowa-oferta.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Nowa oferta"
+icon: "pen-to-square"
 ---
 
 <Frame>
@@ -272,7 +273,7 @@ Wybór osoby z arkusza _Serwisanci_ (z uprawnieniem Admin).
   Wbrew nazwie, arkusz **Serwisanci** zawiera także pracowników administracyjnych (interfejs _Kadra_).
 </Note>
 
-## Przyciski akcji oferty
+## Dolne przyciski akcji
 
 ### Usuń ofertę
 
@@ -360,7 +361,7 @@ Automatyzacja wysyła dane do **DocsAutomator** przez API, wklejając je w odpow
   style={{ width:"65%" }}
 />
 
-Wygenerowany plik PDF można zobaczyć i pobrać w polu "pliki" na dole strony. Dokument zostanie również zapisany na dysku google w lokalizacji  **__nazwa szpitala / oferty / nr oferty__**
+Wygenerowany plik PDF można zobaczyć i pobrać w polu "pliki" na dole strony. Dokument zostanie również zapisany na dysku google w lokalizacji  ****nazwa szpitala / oferty / nr oferty****
 
 ## Wypełnianie rekordu zleceń serwisowych
 
