Documentation edits made through Mintlify web editor

--- a/interfejsy/karty/zlecenie-serwisowe.mdx
+++ b/interfejsy/karty/zlecenie-serwisowe.mdx
@@ -227,9 +227,9 @@ Osoba która odebrała urządzenie. Referencja do arkusza Kontakty.
 
 ### Podpis
 
-Link do podpisu osoby odbierającej urządzenie. 
+Link do podpisu osoby odbierającej urządzenie.
 
-Jeżeli zamiast linku jest lokalizacja lokalnego pliku (np. file:///data/user/0/com.luckydroid.droidbase/files/...), to znaczy że **plik nie wysłał się do chmury**. Często tak się dzieje jeżeli dodanie pliku do rekordu było ostatnią edycją rekordu. Zwykle razem z automtyzacją o 6 rano link do chmury zostanie wysłany do airtable. 
+Jeżeli zamiast linku jest lokalizacja lokalnego pliku (np. file:///data/user/0/com.luckydroid.droidbase/files/...), to znaczy że **plik nie wysłał się do chmury**. Często tak się dzieje jeżeli dodanie pliku do rekordu było ostatnią edycją rekordu. Zwykle razem z automtyzacją o 6 rano link do chmury zostanie wysłany do airtable.
 
 By ręcznie wymusić zmianę, należy otworzyć rekord w memento i wprowadzić dowolną zmianę w rekordzie. To spowoduje wysłanie rekordu do airtable.
 
@@ -290,3 +290,7 @@ Pole typu lookup pokazuące zawartość pola "pliki" w podłączonym rekordzie o
 ### Faktura pdf
 
 Pole typu lookup pokazuące zawartość pola "pliki" w podłączonym rekordzie przepływu.
+
+## Komentarze i historia zmian
+
+Opis dostępny [tutaj.](/interfejsy/karty/karta-rekordu)
