Documentation edits made through Mintlify web editor

--- a/interfejsy/oferty/oferta-ze-zlecenia.mdx
+++ b/interfejsy/oferty/oferta-ze-zlecenia.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Oferta ze zlecenia"
-icon: 'screwdriver-wrench'
+icon: "screwdriver-wrench"
 ---
 
 <Frame>
@@ -124,6 +124,7 @@ Oferta powstała ze zlecenia automatycznie wypełnia część pól:
 - Pola: _Nr. Zgłoszenia Klienta_, _SN_, _INW_, _Nazwa_, _Model_, _Producent_, _Szpital_, _Płatnik_, _Oddział_, _Magazyn przepływy_ → pobierane z rekordu
 - **Typ** → „Serwis”
 - **Uwagi wew.** → Informacje mające na celu ułatwienie wypełnienia oferty, dane z pól: usterka, naprawa, szacowany koszt, rzeczywisty czas naprawy, ocena.
+- **Części** → przypisane do oferty zostaną te same rekordy co do zlecenia serwisowego. 
 
 <img
   src="/images/Zrzutekranu2025-10-13113521.png"
